# arlingtontx_opendata_01

./: .gitignore  render.yaml
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py  routes.py  services.py
backend/data/raw/: cases.csv  complaints.csv  parcels.csv  permits.csv
backend/scripts/: ingest_metrics.py
backend/tests/: test_api.py
docs/: 80-20-plan.md  architecture.md  data_sources.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BulletList.tsx  KpiStrip.tsx  PermitWatchlist.tsx  RiskTable.tsx  TransparencySection.tsx  TrendCharts.tsx  icons.tsx
frontend/src/lib/: api.ts  config.ts
